--- a/package.json
+++ b/package.json
@@ -4,29 +4,39 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "npm run build-json && cross-env NODE_ENV=development webpack-dev-server -d --hot --config webpack.dev.js",
+    "dev": "npm start",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack && node ./utils/build-data-json.js",
-    "start": "webpack-dev-server --config webpack.config.js && node ./utils/build-data-json.js",
+    "build": "npm run build-json && cross-env NODE_ENV=production webpack-cli -p --config webpack.pro.js && npm run build-json",
     "build-json": "node ./utils/build-data-json.js"
   },
   "author": "kilojq",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kilojq/custom-space.git"
+  },
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
+    "cross-env": "^5.2.0",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "images": "^3.0.1",
+    "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.8.3",
-    "npm": "^5.8.0",
+    "postcss-loader": "^2.1.5",
     "sass-loader": "^7.0.1",
     "style-loader": "^0.20.3",
     "url-loader": "^1.0.1",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.2"
+    "vconsole-webpack-plugin": "^1.4.2",
+    "webpack": "^4.12.2",
+    "webpack-cli": "^3.0.8",
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.3"
   }
 }
